syntax = "proto3";

import "common/v1/payment_method.proto";

// Package payment.v1 содержит API для работы с оплатой заказа
package payment.v1;

option go_package = "github.com/CantDefeatAirmanx/space-engeneering/shared/proto/payment/v1;payment_v1";

// PaymentService предоставляет API для работы с оплатой заказа
service PaymentService {
    // PayOrder оплачивает заказ
    rpc PayOrder(PayOrderRequest) returns (PayOrderResponse);
}

// PayOrderRequest описывает запрос на оплату заказа
message PayOrderRequest {
    // order_uuid идентификатор заказа
    string order_uuid = 1;
    // user_uuid идентификатор пользователя
    string user_uuid = 2;
    // payment_method метод оплаты
    common.v1.PaymentMethod payment_method = 3;
}

// PayOrderResponse описывает ответ на запрос на оплату заказа
message PayOrderResponse {
    // transaction_uuid идентификатор транзакции
    string transaction_uuid = 1;
}

